release: v1.2.0 CMS MS-DRG v44 support
Add v440 grouper and MCE data, version-aware cluster handling, and v440 HAC behavior. Extend Java comparison tooling with flag-level validation and update release metadata and CI smoke coverage.